# codetovec

./: .mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: test.yaml
src/: codetovec.py
tests/: test_codetovec.py
